# ebpf-demo

./: .gitignore  LICENSE  README.md  dev  docker-compose.yml  fastapi.txt  get_source_code.py  trace.txt
fastapi-server/: Dockerfile  Makefile  main.py  models.py  openapi.yaml  pyproject.toml  requirements.txt  schemas.py  test.txt  users.db
tracer/: Dockerfile  Makefile  entrypoint.sh  go.mod  trace.go  tracer.c
tracer/.devcontainer/: devcontainer.json
tracer/cmd/tracer/: main.go
tracer/pkg/bpf/: tracer.c  tracer.h
